                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
	 
04-10-14 mma (testem13-V10-00-02)
- TestEm13.cc : use G4Random
	 
03-10-14 mma (testem13-V10-00-01)
- MT migration

21-06-14 mma (testem13-V10-00-00)
- remove PhysicsList::SetCuts(). Update macros
- suppress EventAction and its Messenger

19-06-13 mma (testem13-V09-06-04)
- SteppingVerbose: use G4Step::GetSecondaryInCurrentStep().
     
07-06-13 mma (testem13-V09-06-03)
- Cosmetic in SteppingAction.
     
01-04-13 A.Dotti (testem13-V09-06-02)
- New G4VUserPhysicsList interface 

13-02-13 I.Hrivnacova(testem13-V09-06-01) 
- Applied coding guidelines (virtual keyword, data members initialization)

11-12-12 V.Ivant (testem13-V09-06-00)
- PhysListEmStandard: use SetEmModel method

12-10-12 V.Ivant (testem13-V09-05-02)
- Migration to the updated analysis tool and inplicit units
     
08-10-12 mma (testem13-V09-05-01)
- G4 coding conventions: virtual
     
10-04-12 mma (testem13-V09-05-00)
- all classes : apply G4 coding conventions
     
08-11-11 mma (testem13-V09-04-02)
- modify SteppingVerbose for OutOfWorld
          
31-05-11 mma (testem13-V09-04-01)
- DetectorConstruction : for Water, set I = 78 eV (instead of 75 eV)

12-05-11 mma (testem13-V09-04-00)
- PhysListEmStandard: adapted for 9.4-ref-03 
  include AtomicDeexcitation, new G4PEEffectFluoModel, G4KleinNishinaModel.
       
06-06-10 J.Perl (testem13-V09-03-03)
- Remove unused variable in EventAction

03-06-10 J.Perl (testem13-V09-03-02)
- Updated vis usage 

05-04-10 mma (testem13-V09-03-01)
- PhysicsList: remove non pertinent EmOptions
- RunAction: replace ProcessCount by map<string, int> 
    
02-04-10 mma (testem13-V09-03-00)