@@ -15,6 +15,9 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 	 
+24-10-14 mma (testem13-V10-00-03)
+- TestEm12.in : /run/numberOfThreads 2
+
 04-10-14 mma (testem13-V10-00-02)
 - TestEm13.cc : use G4Random
 	 
